@@ -257,6 +257,10 @@ void BX_CPU_C::SvmExitLoadHostState(SVM_HOST_STATE *host)
 
   handleCpuContextChange();
 
+#if BX_SUPPORT_MONITOR_MWAIT
+  BX_CPU_THIS_PTR monitor.reset_monitor();
+#endif
+
   BX_INSTR_TLB_CNTRL(BX_CPU_ID, BX_INSTR_CONTEXT_SWITCH, 0);
 }
 
@@ -555,6 +559,10 @@ bx_bool BX_CPU_C::SvmEnterLoadCheckGuestState(void)
     BX_CPU_THIS_PTR async_event = 1;
 
   handleCpuContextChange();
+
+#if BX_SUPPORT_MONITOR_MWAIT
+  BX_CPU_THIS_PTR monitor.reset_monitor();
+#endif
 
   BX_INSTR_TLB_CNTRL(BX_CPU_ID, BX_INSTR_CONTEXT_SWITCH, 0);
 
